@@ -107,7 +107,8 @@ typedef enum WBXMLError_e {
     WBXML_ERROR_XMLPARSER_OUTPUT_UTF16,
     WBXML_ERROR_CHARSET_UNKNOWN,
     WBXML_ERROR_CHARSET_CONV_INIT,
-    WBXML_ERROR_CHARSET_CONV
+    WBXML_ERROR_CHARSET_CONV,
+    WBXML_ERROR_CHARSET_NOT_FOUND
 } WBXMLError;
 
 
